language/move-lang/tests/move_check/parser/struct_type_resource.exp
error: 

   ┌── tests/move_check/parsing/struct_type_resource.move:3:17 ───
   │
 3 │     struct S<T: res> { }
   │                 ^^^ Unrecognized Token: res
   ·
 3 │     struct S<T: res> { }
   │                 --- Expected:  "copyable", "resource",
   │

